fix visibility of footer

--- a/styles/clemens anzmann style.css
+++ b/styles/clemens anzmann style.css
@@ -134,5 +134,5 @@ a img {
 #footer-text {
   font-size: 12px;
   font-style: italic;
-  visibility: hidden;
+  display: none;
 }
